<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_marginBottom="10dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:animateLayoutChanges="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/device_item_imei"
            android:textColor="@color/imeiLabelColor"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/imeiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="123456789123456"
            android:textColor="@color/imeiLabelColor"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/locationBackColor"
        android:orientation="horizontal"
        android:animateLayoutChanges="true"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/device_item_location"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/locationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="AMMAN"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/l2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <TableRow
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:animateLayoutChanges="true"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tempLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/device_item_temp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tempValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="22C"
                    android:textColor="@color/valuesColor"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/ic_thermometer"
                    app:drawableTint="@color/valuesColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tempLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:animateLayoutChanges="true"
                android:layout_margin="5dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/humidityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/device_item_humidity"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/humValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="22C"
                    android:textColor="@color/valuesColor"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/ic_humidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:animateLayoutChanges="true"
                android:layout_margin="5dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/energyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/device_item_energy"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/energyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="22C"
                    android:textColor="@color/valuesColor"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/ic_power"
                    app:drawableTint="@color/valuesColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/energyLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:animateLayoutChanges="true"
                android:background="@color/white">

                <TextView
                    android:id="@+id/expectedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/device_item_expected"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/expectedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="22C"
                    android:textColor="@color/valuesColor"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/ic_power"
                    app:drawableTint="@color/valuesColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expectedLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/device_item_status_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/statusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"

            android:fontFamily="@font/montserrat_bold"
            android:text="@string/device_item_status_ok"
            android:textColor="@color/valuesColor"
            android:textSize="24sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"

        android:animateLayoutChanges="true"
        android:background="@drawable/history_btn"
        android:fontFamily="@font/montserrat_bold"
        android:padding="5dp"
        android:text="@string/device_item_history_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l3" />

</androidx.constraintlayout.widget.ConstraintLayout>
