<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    tools:context=".activity.Home">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/ic_baseline_subdirectory_arrow_left_24"
        android:drawableTint="@color/mainColor"

        android:fontFamily="@font/montserrat_bold"
        android:text="@string/home_logout_btn"
        android:textColor="@color/mainColor"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/labelColor"
        android:fontFamily="@font/montserrat_bold"
        android:padding="5dp"
        android:text="@string/home_header"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/itemsswipetorefresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="70dp"
        android:background="@color/deviceItemColor"
        app:layout_constraintBottom_toTopOf="@+id/addDeviceBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devicesRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addDeviceBtn"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/add_device_btn"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:drawablePadding="1dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/home_add_device_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>